--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,11 @@
               name="email"
               required
               email
+              #email="ngModel"
             />
+            <span class="help-block" *ngIf="email.touched && !email.valid"
+              >Please enter a valid email!</span
+            >
           </div>
         </div>
         <div class="form-group">
